--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-flatpickr": "^3.10.7",
+    "react-helmet": "^6.1.0",
+    "react-lottie": "^1.2.3",
+    "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-web-tabs": "^1.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
